# uptui

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  TESTS.md  build.sh  config.yaml.example  docker-compose.yaml  go.mod  requirements.txt
.github/workflows/: ci.yml
cmd/uptui/: main.go
config/: config.yaml.example  monitors.toml
docs/: ROADMAP.md  TESTS.md
internal/checker/: checker.go  checker_test.go
internal/config/: config.go  config_test.go
internal/daemon/: daemon.go  daemon_test.go
internal/ipc/: client.go  ipc_test.go  protocol.go  server.go
internal/models/: models.go  models_test.go
internal/store/: store.go  store_test.go
internal/tui/: app.go  app_test.go  styles.go  theme.go  theme_test.go
src/: alert.rs  cli.rs  config.rs  daemon.rs  data.rs  lib.rs  main.rs  monitor.rs  smtp.rs  smtp_lettre.rs  storage.rs  tui.rs
tests/: alerting.rs  async_checks.rs  cli_monitor_list_shows_recipients.rs  cli_monitor_results.rs  cli_monitors.rs  cli_monitors_recipients.rs  cli_set_recipients.rs  conftest.py  daemon_cycle.rs  daemon_dispatch.rs  integration.rs  smtp_lettre.rs  smtp_stub.rs  storage_checks.rs  test_cli.py  test_monitor.py
uptui/: app.py  cli.py  db.py  monitor.py
