[package]
name = "uptui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "2"
tiny_http = "0.12"
